# ZeroDAC

./: .gitignore  LICENSE
Firmware/: CMakeLists.txt  main.c
Firmware/include/: ws2812_driver.h
Firmware/src/: ws2812.pio  ws2812_driver.c
